fixed z-index issue on unclickable links

--- a/scss/global.scss
+++ b/scss/global.scss
@@ -58,6 +58,7 @@
   height: 590px;
   top: -375px;
   overflow: visible !important;
+  z-index: 1;
   -webkit-transform: rotate(2deg);  /* Chrome, Safari 3.1+ */
      -moz-transform: rotate(2deg);  /* Firefox 3.5-15 */
       -ms-transform: rotate(2deg);  /* IE 9 */
@@ -338,7 +339,7 @@
 
 #frames {
   position: relative;
-  z-index: -1;
+  /*z-index: -1;*/
   float: left;
   width: 42%;
   padding-left: 45px;
